--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
         box-sizing: border-box;
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       }
-
+      html {
+        height:100%
+          width:100%
+          background: linear-gradient(135deg, #61321c, #7a3b26, #4f1f12);
+      }
+      
       body {
         min-height: 100vh;
         display: flex;
