--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       }
       html {
-        height:100%
-          width:100%
+        height:100%;
+          width:100%;
           background: linear-gradient(135deg, #61321c, #7a3b26, #4f1f12);
       }
       
