Refactor CSS for html and body elements

--- a/index.html
+++ b/index.html
@@ -11,25 +11,20 @@
         box-sizing: border-box;
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       }
-      html {
-        height:100%;
-          width:100%;
-          background: linear-gradient(135deg, #61321c, #7a3b26, #4f1f12);
-      }
-      
-      body {
-        min-height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background: linear-gradient(135deg, #61321c, #7a3b26, #4f1f12);
-        overflow-x: hidden;
-        padding: 1rem;
+      html, body {
+  background: linear-gradient(135deg, #61321c, #7a3b26, #4f1f12);
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+}
 
-        padding-top: env(safe-area-inset-top);
+/* Correção para o iPhone (safe area) */
+body {
+  padding-top: env(safe-area-inset-top);
   padding-bottom: env(safe-area-inset-bottom);
   background-clip: border-box;
-      }
+}
+
 
       /* Loading Screen */
       .loading-screen {
