Fix image paths and CSS formatting in index.html

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       }
       html {
-        height:100%
-          width:100%
-          background: linear-gradient(135deg, #61321c, #7a3b26, #4f1f12);
+        height: 100%;
+        width: 100%;
+        background: linear-gradient(135deg, #61321c, #7a3b26, #4f1f12);
       }
-      
+
       body {
         min-height: 100vh;
         display: flex;
@@ -477,7 +477,7 @@
     <div class="loading-screen" id="loadingScreen">
       <div class="loading-logo">
         <!-- Substitua o src abaixo pela sua imagem de carregamento -->
-        <img src="IMAGES/CARDÁPIOMAISCAFÉ(logo)2.png" alt="Logo" />
+        <img src="IMAGES/CARDÁPIO MAIS CAFÉ (logo) 2.png" alt="Logo" />
       </div>
       <div class="loading-bar-container">
         <div class="loading-bar" id="loadingBar"></div>
@@ -492,12 +492,12 @@
     <!-- Floating Icons -->
     <!-- Substitua o src abaixo pela sua imagem do ícone flutuante superior -->
     <div class="floating-icon top">
-      <img src="IMAGES/chicaracopy2.png" alt="Ícone" />
+      <img src="IMAGES/chicara copy 2.png" alt="Ícone" />
     </div>
 
     <!-- Substitua o src abaixo pela sua imagem do ícone flutuante inferior -->
     <div class="floating-icon bottom">
-      <img src="IMAGES/chicaracopy.png" alt="Ícone" />
+      <img src="IMAGES/chicara copy.png" alt="Ícone" />
     </div>
 
     <!-- Main Content -->
@@ -509,7 +509,7 @@
           <div class="logo-container animate-fall delay-2">
             <!-- Substitua o src abaixo pela sua logo principal -->
             <img
-              src="IMAGES/CARDÁPIOMAISCAFÉ(logo)2.png"
+              src="IMAGES/CARDÁPIO MAIS CAFÉ (logo) 2.png"
               alt="Logo Mais Café"
             />
           </div>
