--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
     <div class="loading-screen" id="loadingScreen">
       <div class="loading-logo">
         <!-- Substitua o src abaixo pela sua imagem de carregamento -->
-        <img src="CARDÁPIO MAIS CAFÉ (logo) 2.png" alt="Logo" />
+        <img src="IMAGES/CARDÁPIO MAIS CAFÉ (logo) 2.png" alt="Logo" />
       </div>
       <div class="loading-bar-container">
         <div class="loading-bar" id="loadingBar"></div>
@@ -492,12 +492,12 @@
     <!-- Floating Icons -->
     <!-- Substitua o src abaixo pela sua imagem do ícone flutuante superior -->
     <div class="floating-icon top">
-      <img src="chicara copy 2.png" alt="Ícone" />
+      <img src="IMAGES/chicara copy 2.png" alt="Ícone" />
     </div>
 
     <!-- Substitua o src abaixo pela sua imagem do ícone flutuante inferior -->
     <div class="floating-icon bottom">
-      <img src="chicara copy.png" alt="Ícone" />
+      <img src="IMAGES/chicara copy.png" alt="Ícone" />
     </div>
 
     <!-- Main Content -->
@@ -509,7 +509,7 @@
           <div class="logo-container animate-fall delay-2">
             <!-- Substitua o src abaixo pela sua logo principal -->
             <img
-              src="CARDÁPIO MAIS CAFÉ (logo) 2.png"
+              src="IMAGES/CARDÁPIO MAIS CAFÉ (logo) 2.png"
               alt="Logo Mais Café"
             />
           </div>
@@ -521,7 +521,7 @@
 
           <div class="card-divider animate-fall delay-4">
             <div class="divider-line"></div>
-            <img src="chicara.png" alt="Divisor" class="divider-icon" />
+            <img src="IMAGES/chicara.png" alt="Divisor" class="divider-icon" />
             <div class="divider-line"></div>
           </div>
 
