--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       }
 
       body {
-        min-height: 100dvh;
+        min-height: 100vh;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -33,7 +33,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 100dvh;
+        height: 100vh;
         background: linear-gradient(135deg, #61321c, #7a3b26, #4f1f12);
         display: flex;
         flex-direction: column;
