Update button to open PDF in new tab

--- a/index.html
+++ b/index.html
@@ -765,7 +765,11 @@
           </div>
 
           <div class="buttons">
-            <button class="btn btn-primary" id="menuBtn">
+            <button
+              class="btn btn-primary"
+              id="menuBtn"
+              onclick="window.open('CARDÁPIO MAIS CAFÉ ATUALIZADO.pdf', '_blank')"
+            >
               <svg
                 class="btn-icon"
                 xmlns="http://www.w3.org/2000/svg"
