Update button link to open PDF in Google Docs viewer

--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
             <button
               class="btn btn-primary"
               id="menuBtn"
-              onclick="window.open('cardapio.pdf', '_blank')"
+                onclick="window.open('https://docs.google.com/gview?embedded=true&url=https://maiscafé.store/cardapio.pdf', '_blank')"
             >
               <svg
                 class="btn-icon"
