--- a/index.html
+++ b/index.html
@@ -721,6 +721,160 @@
         background: #f5f5f5;
         object-fit: contain;
       }
+      .menu-images-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 12px;
+        width: 100%;
+        height: 100%;
+        overflow-y: auto;
+        background: #fff;
+        padding: 1rem 0;
+      }
+
+      .menu-images-container img {
+        width: 90%;
+        max-width: 500px;
+        border-radius: 16px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        transition: transform 0.2s ease;
+      }
+
+      .menu-images-container img:hover {
+        transform: scale(1.02);
+      }
+
+      /* === POP-UP DO CARDÁPIO - estilo visualizador === */
+      .menu-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background: rgba(0, 0, 0, 0.85);
+        display: none;
+        align-items: center;
+        justify-content: center;
+        z-index: 99999;
+        backdrop-filter: blur(6px);
+      }
+
+      .menu-overlay.active {
+        display: flex;
+        animation: fadeIn 0.3s ease forwards;
+      }
+
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+          transform: scale(0.95);
+        }
+        to {
+          opacity: 1;
+          transform: scale(1);
+        }
+      }
+
+      .menu-container {
+        background: #fff;
+        width: 90%;
+        max-width: 420px;
+        height: 90vh;
+        border-radius: 18px;
+        display: flex;
+        flex-direction: column;
+        overflow: hidden;
+        box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5);
+        animation: slideUp 0.3s ease forwards;
+      }
+
+      @keyframes slideUp {
+        from {
+          transform: translateY(30px);
+          opacity: 0;
+        }
+        to {
+          transform: translateY(0);
+          opacity: 1;
+        }
+      }
+
+      /* Cabeçalho */
+      .menu-header {
+        background: #a65d3c;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0.9rem 1.2rem;
+        flex-shrink: 0;
+      }
+
+      .menu-title {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+        font-weight: 600;
+        font-size: 1.1rem;
+      }
+
+      .menu-close {
+        width: 34px;
+        height: 34px;
+        border-radius: 50%;
+        background: rgba(255, 255, 255, 0.15);
+        border: none;
+        color: white;
+        font-size: 1.4rem;
+        cursor: pointer;
+        transition: 0.2s;
+      }
+      .menu-close:hover {
+        background: rgba(255, 255, 255, 0.3);
+        transform: scale(1.1);
+      }
+
+      /* Imagens */
+      .menu-images {
+        flex: 1;
+        overflow-y: auto;
+        background: #fff;
+        scroll-behavior: smooth;
+      }
+
+      .menu-images img {
+        width: 100%;
+        display: block;
+        object-fit: contain;
+        border-radius: 0;
+        box-shadow: none;
+      }
+
+      /* Responsivo */
+      @media (max-width: 480px) {
+        .menu-container {
+          width: 95%;
+          height: 92vh;
+          border-radius: 16px;
+        }
+        .menu-title span {
+          font-size: 1rem;
+        }
+      }
+
+      /* Responsivo */
+      @media (max-width: 480px) {
+        .menu-container {
+          width: 95%;
+          height: 92vh;
+          border-radius: 16px;
+        }
+
+        .menu-title span {
+          font-size: 1rem;
+        }
+      }
 
       /* 🔧 Correção iOS Safari – impede o zoom e ajusta ao viewport */
       @supports (-webkit-touch-callout: none) {
@@ -851,6 +1005,30 @@
       }
     </style>
   </head>
+  <!-- POP-UP DO CARDÁPIO - estilo app -->
+  <div class="menu-overlay" id="menuOverlay">
+    <div class="menu-container">
+      <div class="menu-header">
+        <div class="menu-title">
+          
+            <path d="M4 19.5A2.5 2.5 0 016.5 17H20" />
+            <path d="M20 22V2H6.5A2.5 2.5 0 004 4.5v15" />
+          </svg>
+          <span>Cardápio</span>
+        </div>
+        <button class="menu-close" id="menuClose">×</button>
+      </div>
+
+      <div class="menu-images">
+        <img src="IMAGES/cardapio1.png" alt="Cardápio 1" />
+        <img src="IMAGES/cardapio2.png" alt="Cardápio 2" />
+        <img src="IMAGES/cardapio3.png" alt="Cardápio 3" />
+        <img src="IMAGES/cardapio4.png" alt="Cardápio 4" />
+        <!-- <img src="IMAGES/cardapio5.png" alt="Cardápio 5" /> -->
+      </div>
+    </div>
+  </div>
+
   <body>
     <div class="pdf-viewer-overlay" id="pdfViewerOverlay">
       <div class="pdf-viewer-container">
@@ -879,7 +1057,7 @@
             <div class="pdf-loading-spinner"></div>
             <div class="pdf-loading-text">Carregando cardápio...</div>
           </div>
-          <iframe id="pdfIframe" class="pdf-iframe"></iframe>
+          <div id="menuImagesContainer" class="menu-images-container"></div>
         </div>
       </div>
     </div>
@@ -1065,7 +1243,7 @@
             </div>
 
             <div class="footer-info">
-              <p class="footer-text">Servindo os melhores cafés desde 2025</p>
+              <p class="footer-text">Porque toda boa conversa começa com um bom café!</p>
               <p class="footer-address">
                 Rua Dep. Álvaro Soares, 629<br />
                 Ibiapina, CE
@@ -1254,67 +1432,31 @@
           }
         });
 
-      const menuBtn = document.getElementById("menuBtn");
+      // const menuBtn = document.getElementById("menuBtn");
       const pdfViewerOverlay = document.getElementById("pdfViewerOverlay");
       const pdfCloseBtn = document.getElementById("pdfCloseBtn");
-      const pdfIframe = document.getElementById("pdfIframe");
       const pdfLoading = document.getElementById("pdfLoading");
 
-      function openPDF() {
-        const isIOS =
-          /iPad|iPhone|iPod/.test(navigator.userAgent) ||
-          (navigator.userAgent.includes("Mac") && "ontouchend" in document);
+      // === POP-UP DO CARDÁPIO (estilo app) ===
+      const menuBtn = document.getElementById("menuBtn");
+      const menuOverlay = document.getElementById("menuOverlay");
+      const menuClose = document.getElementById("menuClose");
 
-        const pdfUrl = "https://renn1726.github.io/Mais-Cafe/cardapio.pdf";
-
-        if (isIOS) {
-          // 🍎 iOS → Abre diretamente no Safari, mas mostra o "Carregando" rápido antes
-          pdfLoading.style.display = "flex";
-
-          // Pré-carrega o PDF para tornar a abertura mais instantânea
-          const link = document.createElement("link");
-          link.rel = "prefetch";
-          link.href = pdfUrl;
-          document.head.appendChild(link);
-
-          // Abre o PDF imediatamente (sem delay) para evitar bloqueio de popup
-          const newTab = window.open(pdfUrl, "_blank");
-
-          if (newTab) {
-            setTimeout(() => {
-              pdfLoading.style.display = "none";
-            }, 500);
-          } else {
-            alert("Permita pop-ups para visualizar o cardápio.");
-            pdfLoading.style.display = "none";
-          }
-        } else {
-          // 🤖 Android e Desktop → abre no visualizador embutido
-          pdfViewerOverlay.classList.add("active");
-          document.body.style.overflow = "hidden";
-          pdfIframe.src = "cardapio.pdf";
-          pdfIframe.onload = () =>
-            setTimeout(() => (pdfLoading.style.display = "none"), 500);
-        }
-      }
-
-      function closePDF() {
-        pdfViewerOverlay.classList.remove("active");
-        document.body.style.overflow = "";
-        setTimeout(() => {
-          pdfIframe.src = "";
-          pdfLoading.style.display = "flex";
-        }, 600);
-      }
-
-      menuBtn.addEventListener("click", openPDF);
-      pdfCloseBtn.addEventListener("click", closePDF);
-      pdfViewerOverlay.addEventListener("click", (e) => {
-        if (e.target === pdfViewerOverlay) closePDF();
+      menuBtn.addEventListener("click", () => {
+        menuOverlay.classList.add("active");
+        document.body.style.overflow = "hidden";
       });
-      document.addEventListener("keydown", (e) => {
-        if (e.key === "Escape" && pdfViewerOverlay.classList.contains("active"))
-          closePDF();
+
+      menuClose.addEventListener("click", () => {
+        menuOverlay.classList.remove("active");
+        document.body.style.overflow = "";
+      });
+
+      menuOverlay.addEventListener("click", (e) => {
+        if (e.target === menuOverlay) {
+          menuOverlay.classList.remove("active");
+          document.body.style.overflow = "";
+        }
       });
     </script>
   </body>
