--- a/index.html
+++ b/index.html
@@ -1030,7 +1030,7 @@
   </div>
 
   <body>
-    <div class="pdf-viewer-overlay" id="pdfViewerOverlay">
+    <!-- <div class="pdf-viewer-overlay" id="pdfViewerOverlay"> -->
       <div class="pdf-viewer-container">
         <div class="pdf-viewer-header">
           <div class="pdf-viewer-title">
@@ -1433,9 +1433,9 @@
         });
 
       // const menuBtn = document.getElementById("menuBtn");
-      const pdfViewerOverlay = document.getElementById("pdfViewerOverlay");
-      const pdfCloseBtn = document.getElementById("pdfCloseBtn");
-      const pdfLoading = document.getElementById("pdfLoading");
+      // const pdfViewerOverlay = document.getElementById("pdfViewerOverlay");
+      // const pdfCloseBtn = document.getElementById("pdfCloseBtn");
+      // const pdfLoading = document.getElementById("pdfLoading");
 
       // === POP-UP DO CARDÁPIO (estilo app) ===
       const menuBtn = document.getElementById("menuBtn");
